# nyx

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  commitlint.config.mjs  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json
.claude/: compact-check.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
.sdd/: PRD.initial.md
.sdd/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  SECURITY.md  STACK.md  STRUCTURE.md  TESTING.md
.sdd/memory/: constitution.md
apps/server/: package.json
apps/server/src/: app.ts  index.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
discovery/: OPEN_QUESTIONS.md  SPEC.md  STATE.md
discovery/archive/: BRIEF-nyxt-deposit-design.md  DECISIONS.md  ITERATIONS.md  R3-r2-headers-full-report.md  RESEARCH.md  REVISIONS.md
infra/: README.md  fly.toml  package.json  r2-setup.md  tsconfig.json
infra/compile-service/: API.md
infra/devnet/: README.md  docker-compose.yml  preflight-cli.ts  preflight.ts
infra/prover/: fly.toml
infra/tests/: preflight.test.ts
pocs/lace-proving/: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
pocs/webcontainer-lace/: README.md  run.sh
pocs/webcontainer-lace/server/: Cargo.toml
pocs/webcontainer-lace/server/src/: main.rs
scripts/: check-sfw.mjs
specs/001-nyx-platform/: data-model.md  design-network-profiles.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+361 files in other folders)
