[package]
name = "webcontainer-lace-poc"
version = "0.1.0"
edition = "2021"
description = "Nyx PoC: serves a cross-origin-isolated host page that boots a WebContainer, and relays wallet-injection findings from every browser origin to the terminal."

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "set-header", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
open = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
